samples/_failures_safe/1761337316_055149_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_854e69f7.c: In function ‘next_token’:
./samples/SAFE/__tmp_854e69f7.c:135:9: error: expected declaration or statement at end of input
  135 |         token.value[0] = lexer->input[lexer->position++];
      |         ^~~~~
./samples/SAFE/__tmp_854e69f7.c:135:9: error: expected declaration or statement at end of input
